--- a/views/pets-show.pug
+++ b/views/pets-show.pug
@@ -14,13 +14,18 @@ block content
       p=pet.description
       .text-right
         a(href="/pets/" + pet.id + "/edit").btn-link Edit
-      form(action='/pets/${pet._id}/purchase', method='POST')
-        script.stripe-button(src='https://checkout.stripe.com/checkout.js',
-        data-key=PUBLIC_STRIPE_API_KEY,
-        data-amount=pet.price*100,
-        data-name="Proud Pete's Pet Emporium",
-        data-description='Widget',
-        data-image='https://stripe.com/img/documentation/checkout/marketplace.png',
-        data-locale='auto',
-        data-zip-code='true')
-        input.form-control(type="hidden" value=pet._id name="petId")
+      if pet.purchased_at
+        h3.text-success Purchased! on #{pet.purchased_at}
+      else
+        form(action=`/pets/${pet._id}/purchase`, method='POST')
+          script.stripe-button(src='https://checkout.stripe.com/checkout.js',
+          data-key=PUBLIC_STRIPE_API_KEY,
+          data-amount=pet.price*100,
+          data-name="Proud Pete's Pet Emporium",
+          data-description='Widget',
+          data-image='https://stripe.com/img/documentation/checkout/marketplace.png',
+          data-locale='auto',
+          data-zip-code='true')
+          input.form-control(type="hidden" value=pet._id name="petId")
+
+
