Implemented sending email on purchase

--- a/email.handlebars
+++ b/email.handlebars
@@ -10,7 +10,9 @@
 
 <body>
   <div class="container">
-    <p>Hello World!</p>
+    <p>Congrats on your new pet, {{petName}}! 🐶</p>
+    <p>You Paid ${{amount}}</p>
+    <p>Proud Pete's Pet Emporium thanks you! 🐾</p>
   </div>
 </body>
 
