Rename project to Flea Market

--- a/email.handlebars
+++ b/email.handlebars
@@ -12,7 +12,7 @@
   <div class="container">
     <p>Congrats on your new pet, {{petName}}! 🐶</p>
     <p>You Paid ${{amount}}</p>
-    <p>Proud Pete's Pet Emporium thanks you! 🐾</p>
+    <p>Flea Market thanks you! 🐾</p>
   </div>
 </body>
 
