--- a/views/pets-show.pug
+++ b/views/pets-show.pug
@@ -21,7 +21,7 @@ block content
           script.stripe-button(src='https://checkout.stripe.com/checkout.js',
           data-key=PUBLIC_STRIPE_API_KEY,
           data-amount=pet.price * 100,
-          data-name="Proud Pete's Pet Emporium",
+          data-name="Flea Market",
           data-description='Widget',
           data-image='https://stripe.com/img/documentation/checkout/marketplace.png',
           data-locale='auto',
